--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 }
 
 body {
-  background-color: #f5f5f5;
+  background-color: black;
   color: #444;
   font-family: 'Poppins', sans-serif;
   display: flex;
