--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 }
 
 h1 {
-  color: rgb(131, 156, 226);
+  color: rgb(161, 162, 165);
   font-size: 10rem;
   text-align: center;
   opacity: 0.4;
@@ -82,7 +82,7 @@ small {
     <title>Todo List</title>
   </head>
   <body>
-    <h1>To-do <i class="fa-solid fa-check"></i></h1>
+    <h1> <i class="fa-solid fa-check"></i><br> To-do</h1>
     <form id="form">
       <input type="text" class="input" id="input" placeholder="Enter your todo" autocomplete="off">
 
