--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <ul class="todos" id="todos"></ul>
     </form>
-    <small>Left click to toggle completed. <br> Right click to delete todo</small>
+    <small>Left click to toggle completed. <br> Right click to delete Task</small>
 
     <script >
       const form = document.getElementById('form')
